txs auto checkin

--- a/Main.tex
+++ b/Main.tex
@@ -18,6 +18,8 @@
 \usepackage{ifthen}
 \usepackage{boxedminipage}
 \usepackage{todonotes}
+\usepackage[tagged, highstructure]{accessibility}
+\usepackage{axessibility}
 
 % conditional compilation of the document for different languages
 
