--- a/Main.tex
+++ b/Main.tex
@@ -18,7 +18,7 @@
 \usepackage{ifthen}
 \usepackage{boxedminipage}
 \usepackage{todonotes}
-
+\usepackage[tagged, highstructure]{accessibility}
 % conditional compilation of the document for different languages
 
 %\newboolean{German}
