txs auto checkin

--- a/Main.tex
+++ b/Main.tex
@@ -21,6 +21,7 @@
 \usepackage[tagged, highstructure]{accessibility}
 % conditional compilation of the document for different languages
 
+\tracingmacros=1 
 %\newboolean{German}
 %\setboolean{German}{false}
 
@@ -234,6 +235,7 @@ The \LaTeX\ source and code for this book is available from: \\
 \include{Formats}
 \printindex
 
+\tracingmacros=0
 \end{document}
 
 
