--- a/Main.tex
+++ b/Main.tex
@@ -213,12 +213,13 @@ work, please contact the author(s).
 
 The \LaTeX\ source and code for this book is available from: \\
 \url{https://github.com/tscheffl/ThinkC}
-\tracingmacros=1 
+
 \frontmatter
 \tableofcontents
-\tracingmacros=0
+
+
 \mainmatter
-%\include{Chapter1}
+\include{Chapter1}
 \include{Chapter2}
 \include{Chapter3}
 \include{Chapter4}
