txs auto checkin

--- a/Main.tex
+++ b/Main.tex
@@ -214,7 +214,7 @@ work, please contact the author(s).
 The \LaTeX\ source and code for this book is available from: \\
 \url{https://github.com/tscheffl/ThinkC}
 
-\frontmatter
+\frontmatter{0}
 \tableofcontents
 
 
