txs auto checkin

--- a/Main.tex
+++ b/Main.tex
@@ -189,7 +189,7 @@
 
 \vspace{1in}
 
-{\Large Version 1}
+{\Large Version 1.11}
 
 {\small February 1, 2023}
 \vfill
@@ -214,7 +214,7 @@ work, please contact the author(s).
 The \LaTeX\ source and code for this book is available from: \\
 \url{https://github.com/tscheffl/ThinkC}
 
-\frontmatter{0}
+\frontmatter
 \tableofcontents
 
 
