--- a/Main.tex
+++ b/Main.tex
@@ -222,7 +222,7 @@ The \LaTeX\ source and code for this book is available from: \\
 \include{Chapter2}
 \include{Chapter3}
 \include{Chapter4}
-%\include{Chapter5}
+\include{Chapter5}
 %\include{Chapter6_Iteration}
 %\include{Chapter7_Array}
 %\include{Chapter8_String}
