txs auto checkin

--- a/Chapter6_Iteration.tex
+++ b/Chapter6_Iteration.tex
@@ -87,11 +87,11 @@ Several of these operators follow:
 
  \begin{verbatim}
  	int x = 3;
- 	x += 2;  /* means x = x + 2 */      
- 	x *= 4;  /* means x = x * 4  */      
- 	x -= 6;  /* means x = x - 6  */      
- 	x /= 6;  /* means x = x / 6   */    
- 	x %=2 /* means x = x % 2 */  
+ 	x += 2;				/* means x = x + 2 */      
+ 	x *= 4;				/* means x = x * 4  */      
+ 	x -= 6;				/* means x = x - 6  */      
+ 	x /= 6;				/* means x = x / 6   */    
+ 	x %=2;			 /* means x = x % 2 */  
  	
  \end{verbatim}
  %
