txs auto checkin

--- a/Chapter6_Iteration.tex
+++ b/Chapter6_Iteration.tex
@@ -95,7 +95,8 @@ Several of these operators follow:
  \end{verbatim}
  %
 For a very specific set of self assignment, we have an even shorter way to write it. 
-When we add one to a number, we call that incrementing. We call subtracting 1 decrementing. 
+When we add one to a number, we call that incrementing. 
+Decrementing means subtracting one from a number.
 Incrementing and decrementing are so common they have 
 their own operators {\tt ++} for increment and {\tt --} for decrementing.
 
