txs auto checkin

--- a/Chapter6_Iteration.tex
+++ b/Chapter6_Iteration.tex
@@ -98,7 +98,7 @@ For a very specific set of self assignment, we have an even shorter way to write
 When we add one to a number, we call that incrementing. 
 Decrementing means subtracting one from a number.
 Incrementing and decrementing are so common they have 
-their own operators {\tt ++} for increment and {\tt --} for decrementing.
+their own operators {\tt ++} for increment and $--$ for decrementing.
 
  \begin{verbatim}
   int x = 5;
