txs auto checkin

--- a/Chapter6_Iteration.tex
+++ b/Chapter6_Iteration.tex
@@ -147,14 +147,15 @@ type of repetition, that is called {\bf iteration}, and C provides
 several language features that make it easier to write repetitive
 programs.
 
-The two features we are going to look at are the {\tt while}
-statement and the {\tt for} statement.
+We introduce two new control structures,  the {\tt while}
+statement and the {\tt for} statement. 
+These are repetition structures - they repeat stuff.
 
 \section{The {\tt while} statement}
 \index{statement!while}
 \index{while statement}
 
-Using a {\tt while} statement, we can rewrite {\tt Countdown()}:
+We can write {\tt countdown()} program using a {\tt while} statement:
 
 \begin{verbatim}
   void Countdown (int n) 
