txs auto checkin

--- a/Chapter4.tex
+++ b/Chapter4.tex
@@ -501,7 +501,7 @@ Omitting breaks between cases can cause fall through - this can be a bug or a fe
 	
 	//x is an int
 	
-	switch(x):
+	switch(x)
 	{
 		case 1:
 		puts("message1");
