txs auto checkin

--- a/Chapter6_Iteration.tex
+++ b/Chapter6_Iteration.tex
@@ -328,7 +328,8 @@ We can look at another sentinel, but we will call this a {\bf user terminated lo
 	{
 		 //run a wholoe program
 		
-		  //#3 this is an assignment on the variable - we need to prompt and scan again
+		  //#3 this is an assignment on the variable
+		  //we need to prompt and scan again
 		
 		  puts("Do you want to run the progam again");
 		  scanf(" %c", &choice); 
